Added Header and Navigation styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>Home | Priam Group</title>
+		<title>Home | Kwabapale</title>
 		<link rel="stylesheet" href="styles/bootstrap/bootstrap.css" type="text/css">
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
     <link rel="stylesheet" href="styles/responsify.css" type="text/css">
@@ -19,14 +19,17 @@
     </div>
     <header>
       <nav class="navbar navbar__fixed">
-        <div class="brand brand-img">
-          <img class="img img-responsive" src="images/kwabapale_logo.png">
-        </div>
+        
         <div class="nav-menu-holder">
-          <ul class="list list__list-inline">
+          <ul class="list list__list-inline list__list-inline__left">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Our Vision &amp; Mission</a></li>
             <li><a href="#">Our Services</a></li>
+          </ul>
+          <div class="brand brand-img center-absolute">
+            <img class="img img-responsive" src="images/kwabapale_logo.png">
+          </div>
+          <ul class="list list__list-inline list__list-inline__right">
             <li><a href="#">Find Us</a></li>
             <li><a href="#">Become a Customer</a></li>
             <li><a href="#">Contact Us</a></li>
